Added Filter & Sort to list GUI, Fixed duplicate GUI update bug